objects/PrecedentClause__c.object
<CustomObject>
    <description>&lt;PRC&gt; - Represents the link between clauses and agreed clauses for an account at National level.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Precedent Clauses</relationshipLabel>
        <relationshipName>PrecedentClauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BlanketBGAmount__c</fullName>
        <label>Blanket BG Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlanketBGDeedExpiryDate__c</fullName>
        <label>Blanket BG Deed Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BlanketBGDeedRequired__c</fullName>
        <label>Blanket BG Deed Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlanketBGDetails__c</fullName>
        <inlineHelpText>Blanket Bank Guarantee Details</inlineHelpText>
        <label>Blanket BG Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BlanketBGExpiryDate__c</fullName>
        <label>Blanket BG Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BlanketBGReviewDeadline__c</fullName>
        <label>Blanket BG Review Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BlanketBGReviewStatus__c</fullName>
        <label>Blanket BG Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlanketBGReviewTerms__c</fullName>
        <label>Blanket BG Review Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BreakType__c</fullName>
        <label>Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BreakType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentMaximumThreshold__c</fullName>
        <label>Current Maximum Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentMinimumThreshold__c</fullName>
        <label>Current Minimum Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FitOutPeriod__c</fullName>
        <inlineHelpText>Enter number of days.</inlineHelpText>
        <label>Fit Out Period</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GuaranteesType__c</fullName>
        <description>List different types of guarantees</description>
        <label>Guarantees Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GuaranteeTextTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nil_Holdover_Increase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag used to promo increases should not be automatically added in case of Holdover</description>
        <label>Nil Holdover Increase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentageRentComments__c</fullName>
        <label>Percentage Rent Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PercentageRentPercent__c</fullName>
        <label>Percentage Rent %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PromoPercentage__c</fullName>
        <label>Promo Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PromoReviewCappedPercent__c</fullName>
        <inlineHelpText>Nationally agreed capped % for promo reviews</inlineHelpText>
        <label>Promo Review Capped %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PromoReviewDescription__c</fullName>
        <inlineHelpText>Captures the promo review details that has been nationally agreed</inlineHelpText>
        <label>Promo Review Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PromoReviewType__c</fullName>
        <label>Promo Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StandardPromoReviewType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ReviewType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferencedClause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It&apos;s for linking the precedent clause with the existing clause in the clause library</description>
        <label>Referenced Clause</label>
        <referenceTo>ClauseLibrary__c</referenceTo>
        <relationshipLabel>Precedent Clauses</relationshipLabel>
        <relationshipName>PrecedentClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RentReviewCappedPercent__c</fullName>
        <inlineHelpText>Nationally agreed capped % for Rent review</inlineHelpText>
        <label>Rent Review Capped %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RentReviewDescription__c</fullName>
        <inlineHelpText>Capture the Nationally agreed rent review details</inlineHelpText>
        <label>Rent Review Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RentReviewPercent__c</fullName>
        <label>Rent Review %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RentReviewType__c</fullName>
        <label>Rent Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StandardReviewTypes__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ReviewType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequiredSecurityDepositDays__c</fullName>
        <label>Required Security Deposit (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiredSecurityDepositMonths__c</fullName>
        <defaultValue>4</defaultValue>
        <label>Required Security Deposit (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiredSecurityDepositWeeks__c</fullName>
        <label>Required Security Deposit (Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecurityDepositRequired__c</fullName>
        <label>Security Deposit Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecurityDepositType__c</fullName>
        <label>Security Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SecurityDepositTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecurityPositionComments__c</fullName>
        <label>Security Position Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StandardPromoReviewType__c</fullName>
        <description>All standard review types for promo</description>
        <label>Standard Promo Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StandardReviewTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StandardReviewTypes__c</fullName>
        <description>Standard Review Types</description>
        <label>Standard Review Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StandardReviewTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREF_Id__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ClauseType</valueSetName>
        </valueSet>
    </fields>
    <label>Precedent Clause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IncorrectName</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>a0Y</value>
        </filters>
        <label>Incorrect Name</label>
    </listViews>
    <nameField>
        <label>Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Precedent Clauses</pluralLabel>
    <recordTypes>
        <fullName>PRC_NationalAgreements</fullName>
        <active>true</active>
        <description>This to capture Rent review, percentage rent, security position and fitout period</description>
        <label>National Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRC_NationalPrecedentClauses</fullName>
        <active>true</active>
        <description>This Captures the clauses at National level</description>
        <label>National Precedent Clauses</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PRC_CheckBlanketBGDetailsAreEntered</fullName>
        <active>true</active>
        <description>If the security deposit type is Blanket Bank Guarantee then Blanket BG details should be entered</description>
        <errorConditionFormula>AND(ISPICKVAL(SecurityDepositType__c,&apos;Blanket Bank Guarantee&apos;),ISBLANK(BlanketBGDetails__c))</errorConditionFormula>
        <errorMessage>Please enter the Blanket BG Details for the security deposit type &quot;Blanket Bank Guarantee&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_CheckMinandMaxThreshold</fullName>
        <active>true</active>
        <description>Current Minimum Threshold should be less than the Current Maximum Threshold.</description>
        <errorConditionFormula>CurrentMaximumThreshold__c &lt;= CurrentMinimumThreshold__c</errorConditionFormula>
        <errorMessage>Current Minimum Threshold should be less than the Current Maximum Threshold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_CheckSeurityDepositWeeksMonthsYears</fullName>
        <active>true</active>
        <description>User can only enter only one of the values Required Security Deposit (Days), Required Security Deposit (Months), Required Security Deposit (Years)</description>
        <errorConditionFormula>AND(ISPICKVAL(SecurityDepositRequired__c,&apos;Yes&apos;),
OR(
AND(ISBLANK(RequiredSecurityDepositDays__c),ISBLANK(RequiredSecurityDepositMonths__c),ISBLANK(RequiredSecurityDepositWeeks__c)),
OR(
AND(NOT(ISBLANK(RequiredSecurityDepositWeeks__c)),NOT(ISBLANK(RequiredSecurityDepositMonths__c))),
AND(NOT(ISBLANK(RequiredSecurityDepositWeeks__c)),NOT(ISBLANK(RequiredSecurityDepositDays__c))),
AND(NOT(ISBLANK(RequiredSecurityDepositDays__c)),NOT(ISBLANK(RequiredSecurityDepositMonths__c))),
AND(NOT(ISBLANK(RequiredSecurityDepositDays__c)),NOT(ISBLANK(RequiredSecurityDepositMonths__c)),NOT(ISBLANK(RequiredSecurityDepositWeeks__c)))
)
)
)</errorConditionFormula>
        <errorMessage>1) Only one value can be entered in either Required Security Deposit (Weeks),Required 
    Security Deposit (Months) or Required Security Deposit (Days)
2) All Required Security Deposit fields can not be BLANK</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_CurrentMinMaxThreshold</fullName>
        <active>false</active>
        <description>If user enters the value in Current Minimum Threshold, then Current Maximum Threshold should be entered and it’s applicable other way round as well.</description>
        <errorConditionFormula>OR(AND( ISBLANK( CurrentMaximumThreshold__c ), NOT(ISBLANK( CurrentMinimumThreshold__c ))), AND( ISBLANK( CurrentMinimumThreshold__c ), NOT(ISBLANK( CurrentMaximumThreshold__c ))))</errorConditionFormula>
        <errorMessage>Both Current Minimum Threshold and Current Maximum Threshold should be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_PromoPercentageOnNationalAgreement</fullName>
        <active>false</active>
        <description>“It is mandatory for the user to enter the Promo Percentage on the National Agreement, if any of the field  Current Maximum Threshold &amp; Current Minimum Threshold is not blank</description>
        <errorConditionFormula>AND(OR(NOT( ISBLANK( CurrentMaximumThreshold__c ) ) , NOT( ISBLANK(  CurrentMinimumThreshold__c ) )),  ISBLANK( PromoPercentage__c ) )</errorConditionFormula>
        <errorMessage>Promo Percentage needs to be populated if Current Maximum Threshold or Current Minimum Threshold is not blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_RecordCreateRestriction</fullName>
        <active>true</active>
        <description>National agreement can be only created by to Retail admin team</description>
        <errorConditionFormula>AND( 
AND( 
($Profile.Name != &quot;SCG-Retail Admin&quot;), 
($Profile.Name != &quot;System Administrator&quot;), 
($Profile.Name != &quot;SCG-SysAdm&quot;), 
($Profile.Name != &quot;SCG-Sys DataMigration&quot;)),  
ISNEW(),
OR(
ISPICKVAL(Account__r.PartnershipSegmentation__c,&quot;Strategic Partner&quot;),
ISPICKVAL(Account__r.PartnershipSegmentation__c,&quot;Growth Partner&quot;) 
)
)</errorConditionFormula>
        <errorMessage>Only Retail admin team can create the national agreement or precedent clauses for Strategic Partner or Growth Partner Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRC_RecordUpdateRestriction</fullName>
        <active>true</active>
        <description>National agreement can be only changed to Retail admin team</description>
        <errorConditionFormula>AND( 
AND( 
($Profile.Name != &quot;SCG-Retail Admin&quot;), 
($Profile.Name != &quot;System Administrator&quot;), 
($Profile.Name != &quot;SCG-SysAdm&quot;), 
($Profile.Name != &quot;SCG-Sys DataMigration&quot;)),  
NOT(ISNEW()),
OR(
ISPICKVAL(Account__r.PartnershipSegmentation__c,&quot;Strategic Partner&quot;),
ISPICKVAL(Account__r.PartnershipSegmentation__c,&quot;Growth Partner&quot;) 
)
)</errorConditionFormula>
        <errorMessage>Only Retail admin team can change the national agreement or precedent clauses for Strategic Partner or Growth Partner Accounts</errorMessage>
    </validationRules>
</CustomObject>